# conda_cmake_cuda

./: CMakeLists.txt  README.md
include/: parallelproj_cuda.h
recipe/: build.sh
